Estudio del data set en busca de relaciones entre columnas y cancelaciones. Falta revisar el correcto funcionamiento

--- a/Final_Pavón.ipynb
+++ b/Final_Pavón.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVD10QGOMRslvaDwf1wQ/B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/number1angel/tphotel/blob/main/Final_Pav%C3%B3n.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/number1angel/tphotel/blob/Tade/Final_Pav%C3%B3n.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1555,6 +1554,337 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Tambien podemos Analizar a donde viajaron los huespedes, y a que tipo de alojamiento se inclinaron segun la temporada"
+      ],
+      "metadata": {
+        "id": "4uOF-NMvpBvB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "country_wise_guests = df[df['is_canceled'] == 0]['country'].value_counts().reset_index()\n",
+        "country_wise_guests.columns = ['country', 'No of guests']\n",
+        "country_wise_guests"
+      ],
+      "metadata": {
+        "id": "HoheR0two2Rc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "basemap = folium.Map()\n",
+        "guests_map = px.choropleth(country_wise_guests, locations = country_wise_guests['country'],\n",
+        "                           color = country_wise_guests['No of guests'], hover_name = country_wise_guests['country'])\n",
+        "guests_map.show()"
+      ],
+      "metadata": {
+        "id": "qdxwgEy6pQdu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Personas de todo el mundo se estan quedando en esos 2 tipos de alojamiento. En especifico en portugal y otros paises de europa se ve una gran concentracion de turistas"
+      ],
+      "metadata": {
+        "id": "fN-D92pPpXNe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ambos tipos de alojamiento tienen distintos tipos de servicios a la habitacion y otros factores, ademas de que la temporada hara que los valores por tipo de habitacion varien muchisimo"
+      ],
+      "metadata": {
+        "id": "8EOqG2NOqLrh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = df[df['is_canceled'] == 0]\n",
+        "\n",
+        "px.box(data_frame = data, x = 'reserved_room_type', y = 'adr', color = 'hotel', template = 'plotly_dark')"
+      ],
+      "metadata": {
+        "id": "09wW6BmWpW0w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Las figuras muestran como variara el precio por noche de cada habitacion y su desviacion estandar. A concitnuacion veremos como variara el precio a lo largo del año"
+      ],
+      "metadata": {
+        "id": "2xDRlIlrqO5x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_resort = df[(df['hotel'] == 'Resort Hotel') & (df['is_canceled'] == 0)]\n",
+        "data_city = df[(df['hotel'] == 'City Hotel') & (df['is_canceled'] == 0)]"
+      ],
+      "metadata": {
+        "id": "HNpgAe1aqcN4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resort_hotel = data_resort.groupby(['arrival_date_month'])['adr'].mean().reset_index()\n",
+        "resort_hotel"
+      ],
+      "metadata": {
+        "id": "42QTwL0Cqg_G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "city_hotel=data_city.groupby(['arrival_date_month'])['adr'].mean().reset_index()\n",
+        "city_hotel"
+      ],
+      "metadata": {
+        "id": "Nwp0zoSOqilL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "final_hotel = resort_hotel.merge(city_hotel, on = 'arrival_date_month')\n",
+        "final_hotel.columns = ['month', 'price_for_resort', 'price_for_city_hotel']\n",
+        "final_hotel"
+      ],
+      "metadata": {
+        "id": "y3O_fE0BqmBf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Nos podemos dar cuenta de que la columna meses no esta en orden, asi q la ordenaremos para sacar conclusiones mas precisas"
+      ],
+      "metadata": {
+        "id": "AJmT6Iu2qoeR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install sort-dataframeby-monthorweek\n",
+        "\n",
+        "!pip install sorted-months-weekdays\n",
+        "import sort_dataframeby_monthorweek as sd\n",
+        "\n",
+        "def sort_month(df, column_name):\n",
+        "    return sd.Sort_Dataframeby_Month(df, column_name)"
+      ],
+      "metadata": {
+        "id": "Ej0C1k6Sqwba"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "final_prices = sort_month(final_hotel, 'month')\n",
+        "final_prices"
+      ],
+      "metadata": {
+        "id": "uK9pYSaqq1bd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize = (17, 8))\n",
+        "\n",
+        "px.line(final_prices, x = 'month', y = ['price_for_resort','price_for_city_hotel'],\n",
+        "        title = 'Room price per night over the Months', template = 'plotly_dark')"
+      ],
+      "metadata": {
+        "id": "FFmxysUxq5-5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El grafico nos deja a simple vista como los precios en un hotel del tipo resort escalan muchisimo mas que los de un hotel de ciudad  duranteel verano. y que los hoteles de ciudad tienden a variar menos en sus valores, con una pequeña subida durante la primavera y el verano"
+      ],
+      "metadata": {
+        "id": "ijiAi3Qpq8Zk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cuales son los meses con mayor cantidad de huespedes?"
+      ],
+      "metadata": {
+        "id": "xvUG5MRFratO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resort_guests = data_resort['arrival_date_month'].value_counts().reset_index()\n",
+        "resort_guests.columns=['month','no of guests']\n",
+        "resort_guests\n",
+        "city_guests = data_city['arrival_date_month'].value_counts().reset_index()\n",
+        "city_guests.columns=['month','no of guests']\n",
+        "city_guests"
+      ],
+      "metadata": {
+        "id": "HDKTDkVzraL4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "final_guests = resort_guests.merge(city_guests,on='month')\n",
+        "final_guests.columns=['month','no of guests in resort','no of guest in city hotel']\n",
+        "final_guests\n",
+        "final_guests = sort_month(final_guests,'month')\n",
+        "final_guests"
+      ],
+      "metadata": {
+        "id": "4kSv-YfLq77n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "px.line(final_guests, x = 'month', y = ['no of guests in resort','no of guest in city hotel'],\n",
+        "        title='Total no of guests per Months', template = 'plotly_dark')"
+      ],
+      "metadata": {
+        "id": "uhP2DGNur7jX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El hotel de ciudad recibe más huéspedes durante la primavera y el otoño, cuando los precios también son más altos. En julio y agosto hay menos visitantes, aunque los precios son más bajos.\n",
+        "El número de huéspedes del hotel Resort disminuye ligeramente de junio a septiembre, que también es cuando los precios son más altos. Ambos hoteles reciben menos huéspedes durante el invierno."
+      ],
+      "metadata": {
+        "id": "poqozzqqsGPw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cuanto dura la estadia en cada uno?"
+      ],
+      "metadata": {
+        "id": "3u9Eeoemsecg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['total_nights'] = data['stays_in_weekend_nights'] + data['stays_in_week_nights']\n",
+        "data.head()"
+      ],
+      "metadata": {
+        "id": "8SKEfp19q59O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stay = data.groupby(['total_nights', 'hotel']).agg('count').reset_index()\n",
+        "stay = stay.iloc[:, :3]\n",
+        "stay = stay.rename(columns={'is_canceled':'Number of stays'})\n",
+        "stay"
+      ],
+      "metadata": {
+        "id": "1uxHzwZQssmF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "px.bar(data_frame = stay, x = 'total_nights', y = 'Number of stays', color = 'hotel', barmode = 'group',\n",
+        "        template = 'plotly_dark')"
+      ],
+      "metadata": {
+        "id": "5vkRpM3_sskW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Las estadias en hoteles de ciudad son mas abundantes, aunque las estadias en resorts tienden a ser mas longevas"
+      ],
+      "metadata": {
+        "id": "NW-0fd3PswX7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Grafico de calor para buscar relacion entre columnas del data set"
+      ],
+      "metadata": {
+        "id": "7K33r1ucs_g-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize = (24, 12))\n",
+        "\n",
+        "# Select only numerical columns for correlation calculation\n",
+        "numerical_df = df.select_dtypes(include=np.number)\n",
+        "corr = numerical_df.corr()\n",
+        "\n",
+        "sns.heatmap(corr, annot = True, linewidths = 1)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "zTCgZilYsvl7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "#para el analisis de datos dejar el country, agent y company"
@@ -2502,7 +2832,7 @@
         "id": "EWUjL3ajUHRt",
         "outputId": "37b6a648-2ddb-43a9-c5c2-53c4e3dac74e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
