Se creó con Colab

--- a/Copia_de_Final_Pavón.ipynb
+++ b/Copia_de_Final_Pavón.ipynb
@@ -2889,6 +2889,42 @@
     {
       "cell_type": "code",
       "source": [
+        "# Mostrar importancia de cada variable según el modelo\n",
+        "import pandas as pd\n",
+        "coef_importancia = pd.Series(log_model.coef_[0], index=X.columns).sort_values(key=abs, ascending=False)\n",
+        "print(coef_importancia.tail(10))  # Las 10 menos influyentes\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EnKvvbwpiLj2",
+        "outputId": "5f493acd-984f-4bda-e1a6-d692bdcd9d74"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "reserved_room_type_D      -0.068152\n",
+            "children                   0.067362\n",
+            "reserved_room_type_C       0.060666\n",
+            "hotel_Resort Hotel        -0.051514\n",
+            "stays_in_week_nights       0.048043\n",
+            "reserved_room_type_E       0.046549\n",
+            "is_repeated_guest_1       -0.039481\n",
+            "reserved_room_type_B       0.038382\n",
+            "stays_in_weekend_nights    0.027850\n",
+            "adults                     0.019834\n",
+            "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Split train-test\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=25)"
       ],
