Se creó con Colab

--- a/Copia_de_Final_Pavón.ipynb
+++ b/Copia_de_Final_Pavón.ipynb
@@ -2887,45 +2887,78 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Importancia de las variables**"
+      ],
+      "metadata": {
+        "id": "FSYdyLLFmCrl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Antes de refinar el modelo, evaluamos la importancia de cada variable analizando los coeficientes del modelo de regresión logística. Las variables cuyo coeficiente estaba cerca de cero tienen muy poca o ninguna influencia en la predicción. Esto nos permitió identificar y eventualmente eliminar columnas innecesarias o redundantes, mejorando la interpretabilidad del modelo sin afectar su rendimiento."
+      ],
+      "metadata": {
+        "id": "fCMrQbLql_wO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Mostrar importancia de cada variable según el modelo\n",
-        "import pandas as pd\n",
         "coef_importancia = pd.Series(log_model.coef_[0], index=X.columns).sort_values(key=abs, ascending=False)\n",
-        "print(coef_importancia.tail(10))  # Las 10 menos influyentes\n"
+        "print(coef_importancia.tail(10))  # Las 10 menos influyentes"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EnKvvbwpiLj2",
-        "outputId": "5f493acd-984f-4bda-e1a6-d692bdcd9d74"
+        "outputId": "0cb55640-1e90-4ad1-d189-70246fc89f03"
       },
-      "execution_count": 51,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "reserved_room_type_D      -0.068152\n",
-            "children                   0.067362\n",
-            "reserved_room_type_C       0.060666\n",
-            "hotel_Resort Hotel        -0.051514\n",
-            "stays_in_week_nights       0.048043\n",
-            "reserved_room_type_E       0.046549\n",
-            "is_repeated_guest_1       -0.039481\n",
-            "reserved_room_type_B       0.038382\n",
-            "stays_in_weekend_nights    0.027850\n",
-            "adults                     0.019834\n",
+            "reserved_room_type_F         -0.241447\n",
+            "customer_type_Group           0.217148\n",
+            "distribution_channel_TA/TO   -0.180443\n",
+            "reserved_room_type_G         -0.168685\n",
+            "adr                           0.157931\n",
+            "deposit_type_Refundable       0.145172\n",
+            "reserved_room_type_H         -0.144897\n",
+            "total_guests                  0.069082\n",
+            "total_stay                    0.057135\n",
+            "hotel_Resort Hotel           -0.046304\n",
             "dtype: float64\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**División de los datos en entrenamiento y prueba**"
+      ],
+      "metadata": {
+        "id": "ziVpCLiMooyU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dividimos el conjunto de datos en un 80% para entrenamiento y un 20% para prueba. Esta división nos permite evaluar la capacidad del modelo para generalizar a nuevos datos que no vio durante el aprendizaje. Utilizamos un ***random_state*** fijo para garantizar que los resultados sean reproducibles cada vez que se entrena el modelo."
+      ],
+      "metadata": {
+        "id": "mTrq-mTvorm9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Split train-test\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=25)"
       ],
       "metadata": {
@@ -2935,9 +2968,26 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Escalado de variables numéricas**"
+      ],
+      "metadata": {
+        "id": "hWjIjnBNozzb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dado que la regresión logística es sensible a la escala de las variables, normalizamos las columnas numéricas con StandardScaler. Esto asegura que todas tengan media cero y desviación estándar uno, evitando que variables con valores más grandes (como ***adr*** o ***lead_time***) dominen el comportamiento del modelo. Esta práctica mejora la estabilidad y el rendimiento."
+      ],
+      "metadata": {
+        "id": "dhmraIJTo19d"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Escalar variables numéricas (las transformadas y originales)\n",
         "numeric_cols = ['lead_time', 'stays_in_weekend_nights', 'stays_in_week_nights',\n",
         "                'adults', 'children', 'previous_cancellations', 'previous_bookings_not_canceled',\n",
         "                'booking_changes', 'adr', 'total_of_special_requests']\n",
@@ -2954,9 +3004,34 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Entrenamiento del modelo de regresión logística**"
+      ],
+      "metadata": {
+        "id": "Yq88iPdYpF0E"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Entrenamos un modelo de regresión logística con los siguientes parámetros:\n",
+        "\n",
+        "* **C=5**: menor regularización que el valor por defecto (C=1), lo cual permite al modelo ajustarse un poco más a los datos sin sobreajustar.\n",
+        "\n",
+        "* **solver='liblinear'**: método de optimización recomendado para datasets de tamaño medio.\n",
+        "\n",
+        "* **class_weight='balanced'**: ajusta los pesos internos para compensar el desbalance entre clases (la mayoría de las reservas no se cancelan).\n",
+        "\n",
+        "Este enfoque mejora especialmente el rendimiento sobre la clase minoritaria (cancelaciones)."
+      ],
+      "metadata": {
+        "id": "cUgLIFlYpOpd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Entrenamiento del modelo\n",
         "log_model = LogisticRegression(C=5, max_iter=1000, solver='liblinear', class_weight='balanced')\n",
         "log_model.fit(X_train, y_train)"
       ],
@@ -2967,9 +3042,34 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Evaluación del modelo con métricas**"
+      ],
+      "metadata": {
+        "id": "rXAHUjFTpp9T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Evaluamos el modelo con tres métricas:\n",
+        "\n",
+        "* **Accuracy:** mide el porcentaje total de predicciones correctas.\n",
+        "\n",
+        "* **F1 Score:** es la métrica más relevante en este caso porque el dataset está desbalanceado. El F1 balancea precisión y recall, penalizando los errores sobre la clase minoritaria (cancelaciones).\n",
+        "\n",
+        "* **Classification Report:** proporciona métricas detalladas (precision, recall, F1) para cada clase por separado.\n",
+        "\n",
+        "El foco en el ***F1 Score*** responde al objetivo de tener un modelo que no solo acierte mucho, sino que también sea equilibrado en los aciertos de cancelaciones reales."
+      ],
+      "metadata": {
+        "id": "Neoq2VE1psge"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Predicción y evaluación\n",
         "y_pred = log_model.predict(X_test)\n",
         "\n",
         "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
@@ -2983,9 +3083,30 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Matriz de Confusión**"
+      ],
+      "metadata": {
+        "id": "FYHX74iZp4yG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La matriz de confusión nos permite analizar en detalle cuántas predicciones fueron correctas (en la diagonal) y cuántos errores hubo. Es particularmente útil para visualizar:\n",
+        "\n",
+        "* Cuántas cancelaciones fueron correctamente predichas.\n",
+        "\n",
+        "* Cuántas reservas se predijeron como “no canceladas” cuando en realidad sí se cancelaron (falsos negativos), que pueden ser más costosas para el negocio."
+      ],
+      "metadata": {
+        "id": "tEYjDZsDp69E"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Matriz de Confusión\n",
         "plt.figure(figsize=(6, 4))\n",
         "sns.heatmap(confusion_matrix(y_test, y_pred), annot=True, fmt='d', cmap='Blues')\n",
         "plt.title('Matriz de Confusión - Regresión Logística')\n",
@@ -2999,6 +3120,26 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Curva ROC y AUC**"
+      ],
+      "metadata": {
+        "id": "wsrN5oZ2qCAz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La **curva ROC** (Receiver Operating Characteristic) muestra gráficamente el rendimiento del modelo para todos los umbrales posibles. El área bajo la **curva (AUC) **representa la capacidad del modelo para distinguir entre reservas canceladas y no canceladas. En nuestro caso, el AUC fue de aproximadamente 0.84, lo cual indica una buena capacidad discriminativa global del modelo.\n",
+        "\n",
+        "Esta métrica es independiente del umbral y por eso es útil como validación complementaria."
+      ],
+      "metadata": {
+        "id": "bre3iGNjqEgW"
+      }
     },
     {
       "cell_type": "code",
@@ -3039,6 +3180,26 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Análisis de las variables más influyentes**"
+      ],
+      "metadata": {
+        "id": "FnAJ2LzNqMIU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finalmente, analizamos los coeficientes más significativos del modelo. Las variables con mayor valor absoluto fueron aquellas que más empujan la decisión del modelo hacia predecir cancelación o no cancelación. Entre las más influyentes encontramos lead_time, deposit_type_Non Refund, y previous_cancellations, lo cual es coherente con la lógica del negocio: cuanto más anticipada o no reembolsable es una reserva, mayor es la probabilidad de cancelación.\n",
+        "\n",
+        "Este tipo de análisis permite convertir el modelo en una herramienta útil para decisiones estratégicas."
+      ],
+      "metadata": {
+        "id": "mUbUOoEkqQDz"
+      }
     },
     {
       "cell_type": "code",
